[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/booking_details.png" type="Texture" id=1]
[ext_resource path="res://Sirena_TitleBar.tres" type="StyleBox" id=2]
[ext_resource path="res://Fonts/NotoFont_Data.tres" type="DynamicFontData" id=3]
[ext_resource path="res://SirenaTheme.tres" type="Theme" id=4]
[ext_resource path="res://Sprites/personal_details.png" type="Texture" id=5]
[ext_resource path="res://Sprites/your_trip_to_sirena.png" type="Texture" id=6]
[ext_resource path="res://Fonts/BigTitle_Dynamic.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/cancel_booking.png" type="Texture" id=8]
[ext_resource path="res://Sprites/submit_booking.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Booking.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=2]
size = 256
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="BookingScreen" type="Panel"]
margin_left = 360.0
margin_right = 719.999
margin_bottom = 740.0
theme = ExtResource( 4 )
script = ExtResource( 10 )

[node name="TitleBar" type="Panel" parent="."]
margin_right = 360.0
margin_bottom = 56.0
theme = ExtResource( 4 )
custom_styles/panel = ExtResource( 2 )

[node name="Title" type="Label" parent="TitleBar"]
margin_left = 6.0
margin_right = 753.0
margin_bottom = 350.0
rect_scale = Vector2( 0.165, 0.165 )
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "<itemname>"
valign = 1

[node name="Subtitle" type="Label" parent="TitleBar"]
margin_left = 304.0
margin_top = 32.0
margin_right = 1317.0
margin_bottom = 382.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Booking"
valign = 1

[node name="Main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PersonalDetails" type="Sprite" parent="Main"]
position = Vector2( 182, 90 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="PersonalFields" type="Control" parent="Main"]
margin_right = 40.0
margin_bottom = 40.0

[node name="FirstName" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 8.0
margin_top = 108.0
margin_right = 3688.0
margin_bottom = 478.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "First Name"
placeholder_alpha = 0.596

[node name="LastName" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 200.0
margin_top = 108.0
margin_right = 3160.0
margin_bottom = 478.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "Last Name"
placeholder_alpha = 0.596

[node name="DateOfBirth" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 8.0
margin_top = 132.0
margin_right = 2888.0
margin_bottom = 502.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "Date Of Birth"
placeholder_alpha = 0.596

[node name="Email" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 160.0
margin_top = 132.0
margin_right = 3920.0
margin_bottom = 502.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "E-Mail"
placeholder_alpha = 0.596

[node name="AreaCode" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 8.0
margin_top = 156.0
margin_right = 1608.0
margin_bottom = 526.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "Area Code"
placeholder_alpha = 0.596

[node name="PhoneNumber" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 96.0
margin_top = 156.0
margin_right = 5136.0
margin_bottom = 526.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "Phone Number"
placeholder_alpha = 0.596

[node name="StreetAddressLine1" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 8.0
margin_top = 180.0
margin_right = 6808.0
margin_bottom = 550.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "Street Address Line 1"
placeholder_alpha = 0.596

[node name="StreetAddressLine2" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 8.0
margin_top = 204.0
margin_right = 6808.0
margin_bottom = 574.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "Street Address Line 2"
placeholder_alpha = 0.596

[node name="ZipCode" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 8.0
margin_top = 228.0
margin_right = 1288.0
margin_bottom = 598.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "Zip Code"
placeholder_alpha = 0.596

[node name="ZipCode2" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 77.0
margin_top = 228.0
margin_right = 2377.0
margin_bottom = 598.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "City"
placeholder_alpha = 0.596

[node name="ZipCode3" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 201.0
margin_top = 228.0
margin_right = 1461.0
margin_bottom = 598.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "State "
placeholder_alpha = 0.596

[node name="ZipCode4" type="LineEdit" parent="Main/PersonalFields"]
margin_left = 271.0
margin_top = 228.0
margin_right = 1811.0
margin_bottom = 598.0
rect_scale = Vector2( 0.05, 0.05 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
placeholder_text = "Country"
placeholder_alpha = 0.596

[node name="BookingDetails" type="Sprite" parent="Main"]
position = Vector2( 182, 274 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="BookingFields" type="Control" parent="Main"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 45.0

[node name="DestinationTransport" type="LineEdit" parent="Main/BookingFields"]
margin_left = 8.0
margin_top = 288.0
margin_right = 6808.0
margin_bottom = 658.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )

[node name="DepartingDestination" type="LineEdit" parent="Main/BookingFields"]
margin_left = 8.0
margin_top = 384.0
margin_right = 6808.0
margin_bottom = 754.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )

[node name="ScheduledCheckIn" type="LineEdit" parent="Main/BookingFields"]
margin_left = 8.0
margin_top = 312.0
margin_right = 3048.0
margin_bottom = 682.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )

[node name="ScheduledCheckOut" type="LineEdit" parent="Main/BookingFields"]
margin_left = 8.0
margin_top = 336.0
margin_right = 3048.0
margin_bottom = 706.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )

[node name="SCITime" type="LineEdit" parent="Main/BookingFields"]
margin_left = 168.0
margin_top = 312.0
margin_right = 2088.0
margin_bottom = 682.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )
placeholder_alpha = 0.724

[node name="SCOTime" type="LineEdit" parent="Main/BookingFields"]
margin_left = 168.0
margin_top = 336.0
margin_right = 2088.0
margin_bottom = 706.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )

[node name="Adults" type="LineEdit" parent="Main/BookingFields"]
margin_left = 272.0
margin_top = 312.0
margin_right = 1792.0
margin_bottom = 682.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )

[node name="Children" type="LineEdit" parent="Main/BookingFields"]
margin_left = 272.0
margin_top = 336.0
margin_right = 1792.0
margin_bottom = 706.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )

[node name="Rooms" type="LineEdit" parent="Main/BookingFields"]
margin_left = 272.0
margin_top = 360.0
margin_right = 1792.0
margin_bottom = 730.0
rect_scale = Vector2( 0.05, 0.05 )
theme = ExtResource( 4 )

[node name="HotelGrande" type="CheckBox" parent="Main/BookingFields"]
margin_left = 8.0
margin_top = 357.0
margin_right = 190.0
margin_bottom = 565.0
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 4 )

[node name="HGrandeText" type="RichTextLabel" parent="Main/BookingFields"]
margin_left = 31.0
margin_top = 363.0
margin_right = 7664.0
margin_bottom = 714.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.035, 0.035 )
theme = ExtResource( 4 )
text = "Additionally, book accommodation at Hotel Grande"
scroll_active = false

[node name="Price" type="Label" parent="Main"]
anchor_bottom = 0.867
margin_left = 88.0
margin_top = 511.0
margin_right = 776.0
margin_bottom = 885.32
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 20
custom_constants/shadow_offset_y = 20
custom_constants/shadow_as_outline = 0
custom_fonts/font = ExtResource( 7 )
text = "9999"

[node name="YourTripToSirena" type="Sprite" parent="Main"]
position = Vector2( 182, 426 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="Description" type="RichTextLabel" parent="Main"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 413.0
margin_right = 8960.0
margin_bottom = 2956.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.04, 0.04 )
theme = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]
PlaceHolder, AUS > Sirena, PLN

Accommodation: 50

Sirena, PLN > Sydney, AUS: $50"
text = "
PlaceHolder, AUS > Sirena, PLN

Accommodation: 50

Sirena, PLN > Sydney, AUS: $50"
scroll_active = false

[node name="ToSVerif" type="CheckBox" parent="Main"]
margin_left = 8.0
margin_top = 612.0
margin_right = 190.0
margin_bottom = 820.0
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 4 )

[node name="Terms Of Service Agreement" type="RichTextLabel" parent="Main"]
margin_left = 33.0
margin_top = 619.0
margin_right = 9800.0
margin_bottom = 970.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.03, 0.03 )
theme = ExtResource( 4 )
text = "I have read, understood and accepted the PRIVACY POLICY and TERMS OF USE"
scroll_active = false

[node name="SubmitButton" type="TextureButton" parent="Main"]
margin_left = 193.0
margin_top = 641.0
margin_right = 611.0
margin_bottom = 739.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 9 )

[node name="CancelButton" type="TextureButton" parent="Main"]
margin_left = 47.0
margin_top = 641.0
margin_right = 465.0
margin_bottom = 739.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 8 )

[connection signal="pressed" from="Main/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="Main/CancelButton" to="." method="_on_CancelButton_pressed"]
